# research-assistant

./: README.md  docker-compose.custom.yml  docker-compose.yml  pyproject.toml
data/: aiml_papers.json  aiml_papers_processed.json  paper_categories.json
experiments/: add_data_to_db.ipynb  cleaned_paper.html  data_exploration.ipynb  data_wrangling.ipynb  scrape_paper.ipynb
frontend/: home.py
src/: __init__.py  engine.py  main.py  pydantic_classes.py  reranker.py  test.py  test_pydantic.py  vector_database.py  web_loader.py
src/engines/: __init__.py  research_engine.py  summary_engine.py
